fix display issue

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
        <div class="item">
         <!-- Your image here -->
         <center></center>
-          <img src="static/images/main_figure_v1-crop.pdf" alt="MY ALT TEXT"/>
+          <img src="static/images/main_figure_v1.jpg" alt="MY ALT TEXT"/>
         </center>
         
         <h4 class="subtitle is-6 has-text-centered" style="margin-top: 0.5em; color: gray; font-size: small;"">
