--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Replace the content tag with appropriate information -->
   <meta name="description" content="LogicAD project page">
   <meta property="og:title" content="logicad, research"/>
-  <meta property="og:description" content="SOCIAL MEDIA DESCRIPTION TAG TAG"/>
+  <meta property="og:description" content="RWTH Aachen University Research"/>
   <meta property="og:url" content="https://jasonjin34.github.io/logicad.github.io/"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
   <meta property="og:image" content="static/image/main_figure_v1-crop.pdf" />
@@ -25,7 +25,7 @@
 
 
   <title>LogicAD: Explainable Anomaly Detection via VLM-based Text Feature Extraction</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/lfb.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
