--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                       Oliver Simons</a><sup>4</sup>,</span>
                     </span>
                     <span class="author-block">
-                      <a href="https://www.rwth-aachen.de/go/id/bdfr/gguid/0x7E2F13C98071384E8BC07C35B2FD9DAF" target="_blank">Johannes Stegmaier</a><sup>1</sup>,</span>
+                      <a href="https://www.lfb.rwth-aachen.de/de/institute/team/stegmaier/" target="_blank">Johannes Stegmaier</a><sup>1</sup>,</span>
                     </span>
                     <span class="author-block">
                   </div>
