update author list

--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
                     <span class="author-block">
                       <a href="https://www.rwth-aachen.de/go/id/bdfr/gguid/0x7E2F13C98071384E8BC07C35B2FD9DAF" target="_blank">Stefan Decker</a><sup>3</sup>,</span>
                     </span>
+                    <br>
                     <span class="author-block">
-                      Oliver Simons</a><sup>4</sup>,</span>
+                      Oliver Simons</a><sup>4,&dagger;</sup>,</span>
                     </span>
                     <span class="author-block">
-                      <a href="https://www.lfb.rwth-aachen.de/de/institute/team/stegmaier/" target="_blank">Johannes Stegmaier</a><sup>1</sup>,</span>
+                      <a href="https://www.lfb.rwth-aachen.de/de/institute/team/stegmaier/" target="_blank">Johannes Stegmaier</a><sup>1,&dagger;</sup>,</span>
                     </span>
                     <span class="author-block">
                   </div>
@@ -108,7 +109,8 @@
                       <sup>3</sup>Chair of Computer Science i5 Information Systems and Databases, RWTH Aachen University
                       <sup>4</sup> Independent Author
                       <br> 
-                      <span class="eql-cntrb"><small><sup>*</sup>Indicates Equal Contribution</small></span>
+                      <span class="eql-cntrb"><small><sup>*</sup>Corresponding Authors with Equal Contribution</small></span>
+                      <span class="eql-cntrb"><small><sup>&dagger;</sup>Indicates Equal Contribution</small></span>
                     </span>
                   </div>
 
