--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
+                    <span>Code (will be available soon)</span>
                   </a>
                 </span>
                 </a>
